--- a/python-ds.ipynb
+++ b/python-ds.ipynb
@@ -8,7 +8,7 @@
     "\n",
     "## Python Notebooks, Basics, and Data Structures\n",
     "\n",
-    "### Student Name:\n",
+    "### Student Name: Bin Ware\n",
     "\n",
     "Perform the tasks described in the Markdown cells below.  When you have completed the assignment make sure your code cells have all been run (and have output beneath them) and ensure you have committed and pushed ALL of your changes to your assignment repository.\n",
     "\n",
@@ -33,10 +33,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Division result: 5.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "def divide_numbers(a, b):\n",
+    "    result = a / b\n",
+    "    print(f\"Division result: {result}\")\n",
+    "\n",
+    "divide_numbers(10, 2)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -47,10 +61,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Factorial of 1: 1\n",
+      "Factorial of 2: 2\n",
+      "Factorial of 3: 6\n",
+      "Factorial of 4: 24\n",
+      "Factorial of 5: 120\n",
+      "Factorial of 6: 720\n",
+      "Factorial of 7: 5040\n",
+      "Factorial of 8: 40320\n",
+      "Factorial of 9: 362880\n",
+      "Factorial of 10: 3628800\n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1, 11):\n",
+    "    factorial = 1\n",
+    "    for j in range(1, i + 1):\n",
+    "        factorial *= j\n",
+    "    print(f\"Factorial of {i}: {factorial}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -61,11 +98,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mean of testlist: 0.0\n"
+     ]
+    }
+   ],
    "source": [
-    "testlist = [1,-1,2,-2,3,-3,4,-4]"
+    "def calculate_mean(values):\n",
+    "    return sum(values) / len(values)\n",
+    "\n",
+    "testlist = [1, -1, 2, -2, 3, -3, 4, -4]\n",
+    "mean_value = calculate_mean(testlist)\n",
+    "print(f\"Mean of testlist: {mean_value}\")"
    ]
   },
   {
@@ -82,13 +132,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Variance of list1: 1.13973309\n",
+      "Variance of list2: 0.9257232841\n"
+     ]
+    }
+   ],
    "source": [
-    "list1 = [ 5.670e-1, -1.480e+0, -5.570e-1, -1.470e+0, 7.340e-1, 1.050e+0, 4.480e-1, 2.570e-1, -1.970e+0, -1.460e+0]\n",
+    "def calculate_variance(values):\n",
+    "    mean = calculate_mean(values)\n",
+    "    squared_diffs = [(x - mean) ** 2 for x in values]\n",
+    "    variance = sum(squared_diffs) / len(values)\n",
+    "    return variance\n",
+    "\n",
+    "list1 = [5.670e-1, -1.480e+0, -5.570e-1, -1.470e+0, 7.340e-1, 1.050e+0, 4.480e-1, 2.570e-1, -1.970e+0, -1.460e+0]\n",
     "list2 = [-1.780e+0, 2.640e-1, 1.160e+0, 9.080e-1, 1.780e+0, 1.080e+0, 1.050e+0, -4.630e-2, 1.520e+0, 5.350e-1]\n",
-    "# the variances of both lists should be relatively close to 1 (off by less than .15)"
+    "\n",
+    "variance_list1 = calculate_variance(list1)\n",
+    "variance_list2 = calculate_variance(list2)\n",
+    "print(f\"Variance of list1: {variance_list1}\")\n",
+    "print(f\"Variance of list2: {variance_list2}\")"
    ]
   },
   {
@@ -105,10 +174,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First 5 elements: [1, 2, 3, 4, 5]\n",
+      "Last 5 elements: [16, 17, 18, 19, 20]\n",
+      "List reversed: [20, 19, 18, 17, 16, 15, 14, 13, 12, 11, 10, 9, 8, 7, 6, 5, 4, 3, 2, 1]\n",
+      "Every second element: [1, 3, 5, 7, 9, 11, 13, 15, 17, 19]\n",
+      "Every third element: [1, 4, 7, 10, 13, 16, 19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [i for i in range(1, 21)]\n",
+    "print(\"First 5 elements:\", my_list[:5])\n",
+    "print(\"Last 5 elements:\", my_list[-5:])\n",
+    "print(\"List reversed:\", my_list[::-1])\n",
+    "print(\"Every second element:\", my_list[::2])\n",
+    "print(\"Every third element:\", my_list[::3])"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -126,10 +214,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Class Information: {'name': 'Web Mining and Applied NLP', 'course_number': '44-620', 'semester': 'Fall 2024', 'credit_hours': 3, 'learning_objectives': ['Understand web mining techniques', 'Apply natural language processing', 'Analyze and interpret web data', 'Develop data-driven web applications']}\n"
+     ]
+    }
+   ],
+   "source": [
+    "class_info = {\n",
+    "    \"name\": \"Web Mining and Applied NLP\",\n",
+    "    \"course_number\": \"44-620\",\n",
+    "    \"semester\": \"Fall 2024\",\n",
+    "    \"credit_hours\": 3,\n",
+    "    \"learning_objectives\": [\n",
+    "        \"Understand web mining techniques\",\n",
+    "        \"Apply natural language processing\",\n",
+    "        \"Analyze and interpret web data\",\n",
+    "        \"Develop data-driven web applications\"\n",
+    "    ]\n",
+    "}\n",
+    "print(\"Class Information:\", class_info)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -140,18 +250,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Level 3 Spells: ['Mass Healing Word', 'Nondetection', 'Revivify', 'Feign Death', 'Speak with Dead']\n"
+     ]
+    }
+   ],
    "source": [
-    "player_character = {'name': 'Kitab',\n",
-    "                   'class': [('Cleric: Knowledge', 7)],\n",
-    "                   'spells': {'cantrip': ['Guidance', 'Light', 'Thaumaturgy', 'Toll the Dead', 'Word of Radiance'],\n",
-    "                             'level 1': ['Command', 'Detect Magic', 'Healing Word', 'Identify', 'Sleep'],\n",
-    "                             'level 2': ['Augury', 'Calm Emotions', 'Command', 'Invisibility', 'Lesser Restoration'],\n",
-    "                             'level 3': ['Mass Healing Word', 'Nondetection', 'Revivify', 'Feign Death', 'Speak with Dead'],\n",
-    "                             'level 4': ['Banishment', 'Confusion']}\n",
-    "                   }"
+    "player_character = {\n",
+    "    'name': 'Kitab',\n",
+    "    'class': [('Cleric: Knowledge', 7)],\n",
+    "    'spells': {\n",
+    "        'cantrip': ['Guidance', 'Light', 'Thaumaturgy', 'Toll the Dead', 'Word of Radiance'],\n",
+    "        'level 1': ['Command', 'Detect Magic', 'Healing Word', 'Identify', 'Sleep'],\n",
+    "        'level 2': ['Augury', 'Calm Emotions', 'Command', 'Invisibility', 'Lesser Restoration'],\n",
+    "        'level 3': ['Mass Healing Word', 'Nondetection', 'Revivify', 'Feign Death', 'Speak with Dead'],\n",
+    "        'level 4': ['Banishment', 'Confusion']\n",
+    "    }\n",
+    "}\n",
+    "print(\"Level 3 Spells:\", player_character['spells']['level 3'])\n"
    ]
   },
   {
@@ -163,11 +285,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of unique elements: 12\n"
+     ]
+    }
+   ],
    "source": [
-    "values = [10, 11, 10, 8, 1, 12, 0, 1, 6, 5, 5, 13, 6, 15, 0, 0, 1, 1, 9, 7]"
+    "values = [10, 11, 10, 8, 1, 12, 0, 1, 6, 5, 5, 13, 6, 15, 0, 0, 1, 1, 9, 7]\n",
+    "unique_values = set(values)\n",
+    "print(f\"Number of unique elements: {len(unique_values)}\")"
    ]
   },
   {
@@ -188,7 +320,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -202,7 +334,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
