--- a/python-ds.ipynb
+++ b/python-ds.ipynb
@@ -8,7 +8,9 @@
     "\n",
     "## Python Notebooks, Basics, and Data Structures\n",
     "\n",
-    "### Student Name: Bin Ware\n",
+    "### Student Name: Bin Ware \n",
+    "\n",
+    "#### [GitHub Repo](https://github.com/bware7/python-ds-nb-binware)\n",
     "\n",
     "Perform the tasks described in the Markdown cells below.  When you have completed the assignment make sure your code cells have all been run (and have output beneath them) and ensure you have committed and pushed ALL of your changes to your assignment repository.\n",
     "\n",
